add get endpoint which to get system masters
